# pkgmgr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aio.py  config.toml  justfile  main.py  printer.py  pyproject.toml  registry.py
configs/: 99.unsorted.py
example_config/: 99.unsorted.py  pkgmgr.toml
pkgmgr/: _version.py  aio.py  cli.py  command.py  core.py  helpers.py  printer.py  registry.py
