[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "soraxas"}]
description = "Extensible package and configuration manager"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "pkgmgr"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "typer==0.15.3"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "mypy",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
]

[project.scripts]
pkgmgr = "pkgmgr.cli:main"

[tool.coverage.run]
omit = [
  "./pkgmgr/_version.py",
  "./pkgmgr/__init__.py",
  "./tests/*"
]

[tool.mypy]
plugins = []

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./pkgmgr/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
pkgmgr = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "pkgmgr/_version.py"

[tool.pytype]
inputs = ['pkgmgr']
